<resources>
    <string name="app_name">PBJDonationTracker</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_app_screen">AppScreen</string>
    <string name="password">Enter password</string>
    <string name="enterUsername">Enter username</string>
    <string name="usernameLabel">Username</string>
    <string name="cancel">Cancel</string>
    <string name="passwordLabel">Password</string>
    <string name="logout">Log Out</string>
    <string name="viewLocationList">View Locations</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="userNameText">username</string>
    <string name="enterName">Enter name</string>
    <string name="email">email@example.com</string>
    <string name="enterEmail">Enter email</string>
    <string name="createPassword">Create password</string>
    <string name="selectAcctType">Select account type</string>
    <string name="passwordText">password</string>
    <string-array name="acctTypes">
        <item>General User</item>
        <item>Location Employee</item>
        <item>Manager</item>
        <item>Administrator</item>
    </string-array>

    <string name="time">Time: %1$s</string>
    <string name="place">Item Location: %1$s</string>
    <string name="shortdesc">Short Description: %1$s</string>
    <string name="fulldesc">Full Description: %1$s</string>
    <string name="value">Value: $ %1$s</string>
    <string name="category">Category: %1$s</string>

    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="title_activity_list_of_locations">ListOfLocations</string>
    <string name="location">Location Type: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="phone_num">Phone Number: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="website">Website: %1$s</string>
    <string name="title_activity_employee_app_screen">EmployeeAppScreen</string>
    <string name="viewLocationInventory">View My Location\'s Inventory</string>
    <string name="title_activity_add_item_screen">AddItemScreen</string>
    <string name="addItem">Add Item</string>
    <string name="enterTime">Donation Time</string>
    <string name="enterLocation">Select Donation Location</string>
    <string name="enterShortDescr">Short Item Description</string>
    <string name="enterFullDescr">Full Item Description</string>
    <string name="enterValue">Donation Value</string>
    <string name="enterCategory">Selection Item Category</string>
    <string-array name="itemCategories">
        <item>Clothing</item>
        <item>Hat</item>
        <item>Kitchen</item>
        <item>Electronics</item>
        <item>Household</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_list_of_items">ListOfItems</string>
    <string name="addDonation">Add A Donation</string>
    <string-array name="allLocations">
        <item>AFD Station 4</item>
        <item>BOYS &amp; GILRS CLUB W.W. WOOLFOLK</item>
        <item>PATHWAY UPPER ROOM CHRISTIAN MINISTRIES</item>
        <item>PAVILION OF HOPE INC</item>
        <item>D&amp;D CONVENIENCE STORE</item>
        <item>KEEP NORTH FULTON BEAUTIFUL</item>
    </string-array>
    <string-array name="everyLocation">
        <item>All locations</item>
        <item>AFD Station 4</item>
        <item>BOYS &amp; GILRS CLUB W.W. WOOLFOLK</item>
        <item>PATHWAY UPPER ROOM CHRISTIAN MINISTRIES</item>
        <item>PAVILION OF HOPE INC</item>
        <item>D&amp;D CONVENIENCE STORE</item>
        <item>KEEP NORTH FULTON BEAUTIFUL</item>
    </string-array>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="selectYourLoc">Select employment location</string>
    <string name="emailHint">pbj@email.com</string>
    <string name="accounts">Accounts</string>
    <string name="user_accounts">User Accounts</string>
    <string name="emailLabel">Email</string>
    <string name="user_db_label">View User Database</string>
    <string name="exitLabel">Exit</string>
    <string name="dbLabel">User Database</string>
    <string name="lockedLabel">State</string>
    <string name="locked">Locked</string>
    <string name="locnListLabel">List of Locations</string>
    <string name="nameLabel">Name</string>
    <string name="locationLabel">Location</string>
    <string name="coordLabel">Coordinates</string>
    <string name="typeLabel">Type</string>
    <string name="acctTypeLabel">Account Type</string>
    <string name="title_activity_search_screen">SearchScreen</string>
    <string name="searchForItem">Search for this item</string>
    <string name="searchForCat">Search for items in this category</string>
    <string name="searchForLoc"></string>
    <string name="enterItemSearch">Enter an item</string>
    <string name="searchButton">Search</string>
    <string name="title_activity_items_in_category">ItemsInCategory</string>
    <string name="title_activity_items_by_name">ItemsByName</string>
    <string name="title_activity_snack">Snack</string>
</resources>
